change the way to look at the exercise types

--- a/templates/main.html
+++ b/templates/main.html
@@ -172,11 +172,12 @@
                 {% for type in types %}
                 <li><a href="trening_type/{{type[0]}}">{{type[1]}}</a></li>
                 {% endfor %}
+                <div class="add-training">
+                <a href="/show_all_exercise">Look at all exercises</a>
+            </div>
             </ul>
 
-            <div class="add-training">
-                <a href="/add_exercise">+ Добавить упражнение</a>
-            </div>
+
         </div>
 
         <div class="calendar-wrapper">
